--- a/Python/Python Study Notes/05. String 字符串.md
+++ b/Python/Python Study Notes/05. String 字符串.md
@@ -1716,6 +1716,84 @@ Nesting arguments and more complex examples:
 
 
 
+### str.maketrans()
+
+maketrans() 方法用于创建字符映射的转换表，对于接受两个参数的最简单的调用方式，第一个参数是字符串，表示需要转换的字符，第二个参数也是字符串表示转换的目标。
+
+**注：**两个字符串的长度必须相同，为一一对应的关系。
+
+```
+str.maketrans(intab, outtab)
+```
+
+- intab -- 字符串中要替代的字符组成的字符串。
+- outtab -- 相应的映射字符的字符串。
+
+返回字符串转换后生成的新字符串。
+
+> ```
+> Help on built-in function maketrans:
+>
+> maketrans(x, y=None, z=None, /)
+>     Return a translation table usable for str.translate().
+>     
+>     If there is only one argument, it must be a dictionary mapping Unicode
+>     ordinals (integers) or characters to Unicode ordinals, strings or None.
+>     Character keys will be then converted to ordinals.
+>     If there are two arguments, they must be strings of equal length, and
+>     in the resulting dictionary, each character in x will be mapped to the
+>     character at the same position in y. If there is a third argument, it
+>     must be a string, whose characters will be mapped to None in the result.
+> ```
+
+```python
+# python 3.X Example
+
+# str.maketrans({dict})				one argument dictionary
+
+>>> str.maketrans({"1":"X", "2":"Y"})
+{49: 'X', 50: 'Y'}
+
+>>> S = "12345abcde!!!"
+>>> table1 = str.maketrans({"1":"X", "2":"Y", "3":"Z"})
+>>> S.translate(table1)
+'XYZ45abcde!!!'
+------------------------------------------------------------------------------------------
+# str.maketrans(str1, str2) 		two argument string
+
+>>> A = "12345"
+>>> B = "abcde"
+>>> print(str.maketrans(A, B))
+{49: 97, 50: 98, 51: 99, 52: 100, 53: 101}
+
+>>> S = "12345abcde!!!"
+>>> table2 = str.maketrans("abc", "ABC")
+>>> S.translate(table2)
+'12345ABCde!!!'
+------------------------------------------------------------------------------------------
+# str.maketrans(str1, str2, str3)	three argument string
+
+>>> str.maketrans("a", "1", "iop")
+{112: None, 97: 49, 111: None, 105: None}
+>>> str.maketrans("", "", "12345")
+{49: None, 50: None, 51: None, 52: None, 53: None}
+
+>>> S = "12345abcde!!!"
+>>> table3 = str.maketrans("!", "@", "12345")
+>>> S.translate(table3)
+'abcde@@@'
+
+>>> tableDel = str.maketrans("", "", "abcde")
+>>> S.translate(tableDel)
+'12345!!!'
+```
+
+
+
+
+
+
+
 
 
 ### str.replace()
@@ -1796,6 +1874,72 @@ print (str.split('w'))
 ['this', 'is', 'string', 'example....wow!!!']
 ['th', 's is string example....wow!!!']
 ['this is string example....', 'o', '!!!']
+```
+
+
+
+### str.translate()
+
+`translate()` 方法根据参数table给出的表(包含 256 个字符)转换字符串的字符, 要过滤掉的字符放到 del 参数中。
+
+```
+str.translate(table[, deletechars]);
+```
+
+- table -- 翻译表，翻译表是通过maketrans方法转换而来。
+- deletechars -- 字符串中要过滤的字符列表。
+
+返回翻译后的字符串。
+
+> ```
+> # python 2.X
+>
+> Help on method_descriptor:
+>
+> translate(...)
+>     S.translate(table [,deletechars]) -> string
+>     
+>     Return a copy of the string S, where all characters occurring
+>     in the optional argument deletechars are removed, and the
+>     remaining characters have been mapped through the given
+>     translation table, which must be a string of length 256 or None.
+>     If the table argument is None, no translation is applied and
+>     the operation simply removes the characters in deletechars.
+> ```
+
+> ```
+> # python 3.X
+>
+> Help on method_descriptor:
+>
+> translate(...)
+>     S.translate(table) -> str
+>     
+>     Return a copy of the string S, where all characters have been mapped
+>     through the given translation table, which must be a mapping of
+>     Unicode ordinals to Unicode ordinals, strings, or None.
+>     Unmapped characters are left untouched. Characters mapped to None
+>     are deleted.
+> ```
+
+```python
+# python 2.X
+
+>>> s = "1234asdf"
+>>> s.translate(None, "12")
+'34asdf'
+
+==================================================================================================
+# python 3.X
+
+>>> S = "12345abcde!!!"
+>>> table3 = str.maketrans("!", "@", "12345")		# translated using table
+>>> S.translate(table3)
+'abcde@@@'
+
+>>> tableDel = str.maketrans("", "", "abcde")		# del "a","b","c","d","e"
+>>> S.translate(tableDel)
+'12345!!!'
 ```
 
 ### ...
