--- a/Python/Python Study Notes/16. Functions 函数.md
+++ b/Python/Python Study Notes/16. Functions 函数.md
@@ -2099,17 +2099,113 @@ see page 560
 
 ### Function Objects: Attributes and Annotations / 函数对象：属性和注解
 
-#### Indirect Function Calls: “First Class” Objects
+#### Indirect Function Calls: “First Class” Objects / 间接函数调用
+
+Function objects may be assigned to other names, passed to other functions, embedded in data structures, returned from one function to another, and more, as if they were simple numbers or strings
+
+```python
+>>> def echo(message):			# Name echo assigned to function object
+		print(message)
+
+>>> echo('Direct call') 		# Call object through original name
+Direct call
+
+>>> x = echo					# Now x references the function too 
+>>> x('Indirect call!') 		# Call object through name by adding ()
+Indirect call!
+```
+
+Because arguments are passed by assigning objects, it’s just as easy to pass functions to other functions as arguments.
+
+```python
+>>> def indirect(func, arg):
+		func(arg)						# Call the passed-in object by adding ()
+
+>>> indirect(echo, 'Argument call!') 	# Pass the function to another function
+Argument call!
+```
+
+You can even stuff function objects into data structures, as though they were integers or strings.
+
+```python
+>>> schedule = [(echo, "Spam!"), (echo, "Ham!")]
+>>> for (func, arg) in schedule:
+...     func(arg)					# Call functions embedded in containers
+... 
+Spam!
+Ham!
+```
+
+functions can also be created and returned for use elsewhere—the closure created in this mode also retains state from the enclosing scope:
+
+```python
+>>> def make(label):				# Make a function but don't call it
+...     def echo(message):
+...         print(label + ':' + message)
+...     return echo
+... 
+>>> F = make('Spam')				# Label in enclosing scope is retained
+>>> F('Ham!')						# Call the function that make returned
+Spam:Ham!
+>>> F('Apple')
+Spam:Apple
+```
 
 
 
+#### Function Introspection / 函数内省
+
+```python
+>>> def func(a):
+...     b = 'spam'
+...     return b * a
+... 
+>>> func(8)
+'spamspamspamspamspamspamspamspam'
+>>> func.__name__
+'func'
+>>> dir(func)
+['__annotations__', '__call__', '__class__', '__closure__', '__code__', '__defaults__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__get__', '__getattribute__', '__globals__', '__gt__', '__hash__', '__init__', '__kwdefaults__', '__le__', '__lt__', '__module__', '__name__', '__ne__', '__new__', '__qualname__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__']
+```
+
+Introspection tools allow us to explore implementation details too—**functions have attached code objects**, for example, which provide details on aspects such as the func-tions’ local variables and arguments:
+
+```python
+>>> func.__code__
+<code object func at 0x1011265d0, file "<stdin>", line 1>
+>>> dir(func.__code__)
+['__class__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__le__', '__lt__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'co_argcount', 'co_cellvars', 'co_code', 'co_consts', 'co_filename', 'co_firstlineno', 'co_flags', 'co_freevars', 'co_kwonlyargcount', 'co_lnotab', 'co_name', 'co_names', 'co_nlocals', 'co_stacksize', 'co_varnames']
+>>> func.__code__.co_varnames
+('a', 'b')
+>>> func.__code__.co_argcount
+1
+```
 
 
 
+#### Function Attributes / 函数属性
+
+it’s been possible to attach arbitrary user-defined attributes to Function objects
+
+```python
+>>> func
+<function func at 0x1003c2bf8>
+>>> func.count = 0
+>>> func.count += 1
+>>> func.count
+1
+>>> func.handles = 'Button-'
+>>> func.handles 
+'Button-'
+>>> dir(func)
+['__annotations__', '__call__', '__class__', '__closure__', '__code__', '__defaults__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__get__', '__getattribute__', '__globals__', '__gt__', '__hash__', '__init__', '__kwdefaults__', '__le__', '__lt__', '__module__', '__name__', '__ne__', '__new__', '__qualname__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'count', 'handles']
+```
+
+Python’s own implementation-related data stored on functions follows naming conventions that prevent them from clashing with the more arbitrary attribute names you might assign yourself. In 3.X, all function internals’ names have leading and trailing double underscores (“`__X__`”); 2.X follows the same scheme, but also assigns some names that begin with “`func_X`”:
 
 
 
-
+#### Function Annotations in 3.X
 
 
 
