--- a/Python/Python Study Notes/16. Functions 函数.md
+++ b/Python/Python Study Notes/16. Functions 函数.md
@@ -2207,6 +2207,293 @@ Python’s own implementation-related data stored on functions follows naming co
 
 #### Function Annotations in 3.X
 
+In Python 3.X (but not 2.X), it’s also possible to attach annotation information—arbi-trary user-defined data about a function’s arguments and result—to a function object.
+
+annotations are completely optional, and when present are simply attached to the function object’s `__annotations__` attribute for use by other tools.
+
+function annotations are coded in def header lines, as arbitrary expressions associated with arguments and return values. 
+
+- For arguments, they appear after a colon immediately following the argument’s name; 
+
+
+- for return values, they are written after a -> following the arguments list.
+
+```
+>>> def func(a: 'spam', b: (1, 10), c: float) -> int:
+		return a + b + c
+
+>>> func(1, 2, 3) 
+6
+```
+
+Calls to an annotated function. when annotations are present Python collects them in a dictionary and attaches it to the function object itself.
+
+```
+>>> func.__annotations__ 
+{'c': <class 'float'>, 'b': (1, 10), 'a': 'spam', 'return': <class 'int'>}
+```
+
+The following annotates just two of three arguments and steps through the attached annotations generically:
+
+```
+>>> def func(a: 'spam', b, c: 99):
+		return a + b + c
+
+>>> func(1, 2, 3) 
+6
+>>> func.__annotations__ 
+{'c': 99, 'a': 'spam'}
+
+>>> for arg in func.__annotations__:
+		print(arg, '=>', func.__annotations__[arg])
+
+c => 99 
+a => spam
+```
+
+you can still use defaults for arguments if you code annotations—the annotation (and its : character) appear before the default (and its = character); the blank spaces are all optional
+
+```
+>>> def func(a: 'spam' = 4, b: (1, 10) = 5, c: float = 6) -> int:
+		return a + b + c
+
+>>> func(1, 2, 3) 
+6
+>>> func() 				# 4 + 5 + 6 (all defaults)
+15
+>>> func(1, c=10) 		# 1 + 5 + 10 (keywords work normally)
+16
+>>> func.__annotations__ 
+{'c': <class 'float'>, 'b': (1, 10), 'a': 'spam', 'return': <class 'int'>}
+```
+
+note that annotations work only in `def` statements, not `lambda` expressions, because `lambda`’s syntax already limits the utility of the functions it defines.
+
+
+
+### Anonymous Functions: lambda
+
+`lambda` ,  Like `def`, this expression creates a function to be called later, but it returns the function instead of assigning it to a name.
+
+#### lambda Basics
+
+The `lambda`’s general form is the keyword `lambda`, followed by one or more arguments (exactly like the arguments list you enclose in parentheses in a def header), followed by an expression after a colon:
+
+```
+lambda argument1, argument2,... argumentN : expression using arguments
+```
+
+Function objects returned by running `lambda` expressions work exactly the same as those created and assigned by `def`s.
+
+- **lambda is an expression, not a statement**. Because of this, a `lambda` can appear in places a `def` is not allowed by Python’s syntax—inside a list literal or a function call’s arguments, for example. With `def`, functions can be referenced by name but must be created elsewhere. As an expression, `lambda` returns a value (a new func-tion) that can optionally be assigned a name. In contrast, the `def` statement always assigns the new function to the name in the header, instead of returning it as a result.
+
+
+- **lambda’s body is a single expression, not a block of statements**. The lambda’s body is similar to what you’d put in a def body’s return statement; you simply type the result as a naked expression, instead of explicitly returning it. Because it is limited to an expression, a lambda is less general than a def—you can only squeeze so much logic into a lambda body without using statements such as if. This is by design, to limit program nesting: lambda is designed for coding simple functions, and def handles larger tasks.
+
+```
+>>> def func(x, y, z): return x + y + z
+
+>>> func(2, 3, 4) 
+9
+--------------------------------------------------------------------------------------
+achieve the same effect with a lambda expression by explicitly assigning its result to a name through which you can later call the function:
+
+>>> f = lambda x, y, z: x + y + z
+>>> f(2, 3, 4) 
+9
+```
+
+Defaults work on lambda arguments, just like in a def:
+
+```
+>>> x = (lambda a="fee", b="fie", c="foe": a + b + c)
+>>> x("wee") 
+'weefiefoe'
+```
+
+The code in a `lambda` body also follows the same scope lookup rules as code inside a `def`. `lambda` expressions introduce a local scope much like a nested def, which automatically sees names in enclosing functions, the module, and the built-in scope
+
+```
+>>> def knights():
+	title = 'Sir' 
+	action = (lambda x: title + ' ' + x) 	# Title in enclosing def scope
+	return action							# Return a function object
+
+ 
+
+>>> act = knights()
+>>> msg = act('robin')						# 'robin' passed to x
+>>> msg 
+'Sir robin
+
+>>> act 									# act: a function, not its result 
+<function knights.<locals>.<lambda> at 0x00000000029CA488>
+```
+
+
+
+#### Why Use lambda?
+
+Generally speaking, `lambda` comes in handy as a sort of function shorthand that allows you to embed a function’s definition within the code that uses it. They are entirely optional—you can always use def instead, and should if your function requires the power of full statements that the lambda’s expression cannot easily provide—but they tend to be simpler coding constructs in scenarios where you just need to embed small bits of executable code inline at the place it is to be used.
+
+`lambda` is also commonly used to code jump tables, which are lists or dictionaries of actions to be performed on demand. For example:
+
+```
+L = [lambda x: x ** 2, 		# Inline function definition
+	lambda x: x ** 3, 
+	lambda x: x ** 4]		# A list of three callable functions
+
+for f in L:
+	print(f(2))				# Prints 4, 8, 16 
+
+print(L[0](3))				# Prints 9
+```
+
+```
+def f1(x): return x ** 2 
+def f2(x): return x ** 3 	# Define named functions
+def f3(x): return x ** 4
+
+L = [f1, f2, f3]			# Reference by name
+
+for f in L:
+	print(f(2))				# Prints 4, 8, 16 
+
+print(L[0](3))				# Prints 9
+```
+
+##### Multiway branch switches: The finale
+
+```
+>>> key = 'got'
+>>> {'already': (lambda: 2 + 2), 
+	'got': (lambda: 2 * 4), 
+	'one': (lambda: 2 ** 6)}[key]() 
+8
+```
+
+when Python makes the temporary dictionary, each of the nested `lambda`s generates and leaves behind a function to be called later. Indexing by key fetches one of those functions, and parentheses force the fetched function to be called. When coded this way, a dictionary becomes a more general multiway branching tool
+
+##### Scopes: lambdas Can Be Nested Too
+
+`lambda`s are the main beneficiaries of nested function scope lookup (the E in the LEGB scope rule)
+
+```
+>>> def action(x):
+	return (lambda y: x + y)	# Make and return function, remember x
+
+>>> act = action(99)
+>>> act 
+<function action.<locals>.<lambda> at 0x00000000029CA2F0>
+>>> act(2) 						# Call what action returned 
+101
+```
+
+> the nested lambda’s code has access to the variable x in the enclosing `lambda`
+
+
+
+### Functional Programming Tools
+
+Python includes a set of built-ins used for functional programming—tools that apply functions to sequences and other iterables.
+
+#### Mapping Functions over Iterables: map
+
+The `map` function applies a passed-in function to each item in an iterable object and returns a list containing all the function call results.
+
+```
+>>> def inc(x): return x + 10		# Function to be run 
+
+>>> list(map(inc, counters)) 		# Collect results
+[11, 12, 13, 14]
+
+>>> list(map((lambda x: x + 3), counters)) 		# Function expressio
+[4, 5, 6, 7]
+
+>>> pow(3, 4) 						# 3**4
+81
+
+>>> list(map(pow, [1, 2, 3], [2, 3, 4])) 	# 1**2, 2**3, 3**4
+[1, 8, 81]
+
+>>> list(map(inc, [1, 2, 3, 4])) 
+[11, 12, 13, 14]
+>>> [inc(x) for x in [1, 2, 3, 4]] 		# Use () parens to generate items instead
+[11, 12, 13, 14]
+```
+
+
+
+#### Selecting Items in Iterables: filter
+
+```
+>>> list(range(−5, 5)) 								# An iterable in 3.X
+[−5, −4, −3, −2, −1, 0, 1, 2, 3, 4]
+
+>>> list(filter((lambda x: x > 0), range(−5, 5))) 	# An iterable in 3.X
+[1, 2, 3, 4]
+--------------------------------------------------------------------------------------
+>>> res = []
+>>> for x in range(−5, 5):			# The statement equivalent
+		if x > 0: 
+			res.append(x)
+
+>>> res 
+[1, 2, 3, 4]
+--------------------------------------------------------------------------------------
+>>> [x for x in range(−5, 5) if x > 0] 		# Use () to generate items
+[1, 2, 3, 4]
+```
+
+
+
+#### Combining Items in Iterables: reduce
+
+```
+python 3.X
+
+>>> from functools import reduce
+>>> reduce((lambda x, y: x + y), [1, 2, 3, 4]) 
+10
+>>> reduce((lambda x, y: x * y), [1, 2, 3, 4]) 
+24
+--------------------------------------------------------------------------------------
+the for loop equivalent to the first of these calls
+>>> L = [1,2,3,4]
+>>> res = L[0]
+>>> for x in L[1:]:
+		res = res + x
+>>> res 
+10
+```
+
+Coding your own version of `reduce` :
+
+```
+>>> def myreduce(function, sequence):
+		tally = sequence[0] 
+		for next in sequence[1:]:
+			tally = function(tally, next) 
+		return tally
+
+>>> myreduce((lambda x, y: x + y), [1, 2, 3, 4, 5]) 
+15
+>>> myreduce((lambda x, y: x * y), [1, 2, 3, 4, 5]) 
+120
+```
+
+```
+>>> import operator, functools
+>>> functools.reduce(operator.add, [2, 4, 6]) 		# Function-based +
+12
+>>> functools.reduce((lambda x, y: x + y), [2, 4, 6]) 
+12
+```
+
+
+
+
+
 
 
 ## 抽象
