--- a/Python/Python Study Notes/14. Comprehensions 解析.md
+++ b/Python/Python Study Notes/14. Comprehensions 解析.md
@@ -171,5 +171,319 @@ The following is an equivalent, but likely slower, alternative way to achieve th
 
 
 
+## List Comprehensions and Functional Tools
 
 
+
+### List Comprehensions Versus map
+
+List comprehensions collect the results of applying an arbitrary expression to an iterable of values and return them in a new list.
+
+**Example 1 :** 
+
+use a simple `for` loop and append the results to a list:
+
+```
+>>> res = []
+>>> for x in 'spam':
+		res.append(ord(x))			# Manual results collection
+
+>>> res 
+[115, 112, 97, 109]
+```
+
+achieve similar results with `map`
+
+```
+>>> res = list(map(ord, 'spam'))		# Apply function to sequence (or other)
+>>> res 
+[115, 112, 97, 109]
+```
+
+get the same results from a list comprehension expression
+
+```
+>>> res = [ord(x) for x in 'spam']		# Apply expression to sequence (or other)
+>>> res 
+[115, 112, 97, 109]
+```
+
+**Example 2 :** 
+
+list comprehensions:
+
+```
+>>> [x ** 2 for x in range(10)] 
+[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]
+```
+
+To do similar work with a `map` call, with a `lambda`
+
+```
+>>> list(map((lambda x: x ** 2), range(10))) 
+[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]
+```
+
+
+
+### Adding Tests and Nested Loops: filter
+
+**Example 1 :** 
+
+```
+>>> [x for x in range(5) if x % 2 == 0] 
+[0, 2, 4]
+
+>>> list(filter((lambda x: x % 2 == 0), range(5))) 
+[0, 2, 4]
+
+>>> res = []
+>>> for x in range(5):
+		if x % 2 == 0: 
+			res.append(x)
+>>> res 
+[0, 2, 4]
+```
+
+**Example 1 :** 
+
+```
+>>> [x ** 2 for x in range(10) if x % 2 == 0] 
+[0, 4, 16, 36, 64]
+
+>>> list( map((lambda x: x**2), filter((lambda x: x % 2 == 0), range(10))) ) 
+[0, 4, 16, 36, 64]
+```
+
+
+
+### Formal comprehension syntax
+
+list comprehensions are more general still. In their simplest form, you must always code an accumulation expression and a single for clause:
+
+```
+[ expression for target in iterable ]
+```
+
+Though all other parts are optional, they allow richer iterations to be expressed—you can code any number of nested `for` loops in a list comprehension, and each may have an optional associated `if` test to act as a filter. The general structure of list comprehensions looks like this:
+
+```
+[ expression for target1 in iterable1 if condition1
+			 for target2 in iterable2 if condition2 ... 
+			 for targetN in iterableN if conditionN ]
+```
+
+This same syntax is inherited by set and dictionary comprehensions as well as the generator expressions coming up, though these use different enclosing characters (curly braces or often-optional parentheses), and the dictionary comprehension begins with two expressions separated by a colon (for key and value).
+
+**Example 1 :** 
+
+```
+>>> res = [x + y for x in [0, 1, 2] for y in [100, 200, 300]]
+>>> res 
+[100, 200, 300, 101, 201, 301, 102, 202, 302]
+```
+
+This has the same effect as this substantially more verbose equivalent:
+
+```
+>>> res = []
+>>> for x in [0, 1, 2]:
+		for y in [100, 200, 300]: 
+			res.append(x + y)
+
+>>> res 
+[100, 200, 300, 101, 201, 301, 102, 202, 302]
+```
+
+**Example 2 :** 
+
+```
+>>> [x + y for x in 'spam' for y in 'SPAM'] 
+['sS', 'sP', 'sA', 'sM', 'pS', 'pP', 'pA', 'pM', 'aS', 'aP', 'aA', 'aM', 'mS', 'mP', 'mA', 'mM']
+```
+
+**Example 3 :** 
+
+```
+>>> [x + y for x in 'spam' if x in 'sm' for y in 'SPAM' if y in ('P', 'A')] 
+['sP', 'sA', 'mP', 'mA']
+
+>>> [x + y + z for x in 'spam' if x in 'sm' 
+			   for y in 'SPAM' if y in ('P', 'A') 
+			   for z in '123' if z > '1'] 
+['sP2', 'sP3', 'sA2', 'sA3', 'mP2', 'mP3', 'mA2', 'mA3']
+```
+
+**Example 4 :**
+
+```
+>>> [(x, y) for x in range(5) if x % 2 == 0 for y in range(5) if y % 2 == 1] 
+[(0, 1), (0, 3), (2, 1), (2, 3), (4, 1), (4, 3)]
+```
+
+Here is the equivalent state-ment-based code:
+
+```
+>>> res = []
+>>> for x in range(5):
+		if x % 2 == 0:
+			for y in range(5):
+				if y % 2 == 1: 
+					res.append((x, y))
+
+>>> res 
+[(0, 1), (0, 3), (2, 1), (2, 3), (4, 1), (4, 3)]
+```
+
+> if you’re confused about what a complex list comprehension does, you can always nest the list comprehension’s `for` and `if` clauses inside each other like this—indenting each clause successively further to the right—to derive the equivalent state-ments.
+
+
+
+### Example: List Comprehensions and Matrixes
+
+one basic way to code matrixes (a.k.a. multidimensional arrays) in Python is with nested list struc-tures.
+
+**Example 1 :** defines two 3 × 3 matrixes as lists of nested lists:
+
+```
+>>> M = [[1, 2, 3], 
+		 [4, 5, 6], 
+		 [7, 8, 9]]
+
+>>> N = [[2, 2, 2], 
+		 [3, 3, 3], 
+		 [4, 4, 4]]
+```
+
+index rows, and columns within rows, using normal index operations:
+
+```
+>>> M[1] 		# Row 2
+[4, 5, 6]
+
+>>> M[1][2] 	# Row 2, item 3
+6
+```
+
+**Example 2 :** 
+
+```
+>>> [row[1] for row in M] 				# Column 2
+[2, 5, 8]
+
+>>> [M[row][1] for row in (0, 1, 2)] 	# Using offsets
+[2, 5, 8]
+```
+
+**Example 3 :** 
+
+```
+>>> [M[i][i] for i in range(len(M))] 			# Diagonals
+[1, 5, 9]
+
+>>> [M[i][len(M)-1-i] for i in range(len(M))] 
+[3, 5, 7]
+```
+
+**Example 4 :**
+
+```
+>>> L = [[1, 2, 3], [4, 5, 6]]
+>>> for i in range(len(L)):
+		for j in range(len(L[i])): 		# Update in place
+			L[i][j] += 10
+
+>>> L 
+[[11, 12, 13], [14, 15, 16]]
+```
+
+**Example 5 :**
+
+```
+>>> [col + 10 for row in M for col in row] 		# Assign to M to retain new value
+[11, 12, 13, 14, 15, 16, 17, 18, 19]
+
+>>> [[col + 10 for col in row] for row in M] 
+[[11, 12, 13], [14, 15, 16], [17, 18, 19]]
+```
+
+Here is the equivalent
+
+```
+>>> res = []
+>>> for row in M:					# Statement equivalents 
+		for col in row:				# Indent parts further right
+			res.append(col + 10)
+
+>>> res 
+[11, 12, 13, 14, 15, 16, 17, 18, 19]
+
+>>> res = []
+>>> for row in M:
+		tmp = [] 					# Left-nesting starts new list
+		for col in row: 
+          	tmp.append(col + 10) 
+		res.append(tmp)
+
+>>> res 
+[[11, 12, 13], [14, 15, 16], [17, 18, 19]]
+```
+
+**Example 6 :**
+
+```
+>>> M 
+[[1, 2, 3], [4, 5, 6], [7, 8, 9]]
+
+>>> N 
+[[2, 2, 2], [3, 3, 3], [4, 4, 4]]
+
+>>> [M[row][col] * N[row][col] for row in range(3) for col in range(3)] 
+[2, 4, 6, 12, 15, 18, 28, 32, 36]
+
+>>> [[M[row][col] * N[row][col] for col in range(3)] for row in range(3)] 
+[[2, 4, 6], [12, 15, 18], [28, 32, 36]]
+```
+
+Here is the equivalent
+
+```
+>>> res = []
+>>> for row in range(3):
+...     tmp = []
+...     for col in range(3):
+...         tmp.append(M[row][col] * N[row][col])
+...     res.append(tmp)
+... 
+>>> res
+[[2, 4, 9], [12, 15, 18], [28, 32, 36]]
+```
+
+**Example 7 :**
+
+```
+>>> [[col1 * col2 for (col1, col2) in zip(row1, row2)] for (row1, row2) in zip(M, N)]
+[[2, 4, 9], [12, 15, 18], [28, 32, 36]]
+```
+
+Here is the equivalent
+
+```
+>>> res = []
+>>> for(row1, row2) in zip(M, N):
+...     tmp = []
+...     for (col1, col2) in zip(row1, row2):
+...         tmp.append(col1 * col2)
+...     res.append(tmp)
+... 
+>>> res
+[[2, 4, 9], [12, 15, 18], [28, 32, 36]]
+```
+
+
+
+### performance, conciseness, expressiveness\
+
+`map` calls can be twice as fast as equivalent `for` loops, and list comprehensions are often faster than `map` calls.
+
+`map` and list comprehensions run at C language speed inside the interpreter, which is often much faster than stepping through Python `for` loop bytecode within the PVM.
