--- a/Python/Python Study Notes/16. Functions 函数.md
+++ b/Python/Python Study Notes/16. Functions 函数.md
@@ -2426,6 +2426,8 @@ The `map` function applies a passed-in function to each item in an iterable obje
 
 #### Selecting Items in Iterables: filter
 
+Python内建的 `filter()` 函数用于过滤序列。
+
 ```
 >>> list(range(−5, 5)) 								# An iterable in 3.X
 [−5, −4, −3, −2, −1, 0, 1, 2, 3, 4]
@@ -2441,7 +2443,7 @@ The `map` function applies a passed-in function to each item in an iterable obje
 >>> res 
 [1, 2, 3, 4]
 --------------------------------------------------------------------------------------
->>> [x for x in range(−5, 5) if x > 0] 		# Use () to generate items
+>>> [x for x in range(−5, 5) if x > 0] 	# Use () to generate items
 [1, 2, 3, 4]
 ```
 
